--- a/110CP.cabal
+++ b/110CP.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               100CP
+name:               110CP
 version:            0.1.0.0
 synopsis:
     My updated version of the style of the book  
@@ -24,10 +24,11 @@ extra-source-files:
     README.md
     ChangeLog.md
 
-executable 100CP
+executable 110CP
     main-is:          Main.hs
     -- Modules included in this executable, other than Main.
-    other-modules:    LoanFV
+    other-modules:    OHATCP.I.LoanFV,
+                      OHATCP.II.DepositsFV
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
