--- a/110CP.cabal
+++ b/110CP.cabal
@@ -28,7 +28,8 @@ executable 110CP
     main-is:          Main.hs
     -- Modules included in this executable, other than Main.
     other-modules:    OHATCP.I.LoanFV,
-                      OHATCP.II.DepositsFV
+                      OHATCP.II.DepositsFV,
+                      OHATCP.III.RegularDeposits
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
